# CodexDeck

./: .gitattributes  .gitignore  AI_TODO.md  CHANGELOG.md  CODEX_RUNS.md  CONTRIBUTING.md  LICENSE  README.md  agent-cockpit-spec.md  agent-cockpit.py  codexdeck.py  codexdeck_core.py  codexdeck_runner.py  codexdeck_ui.py  codexdeck_version.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: configuration.md  development.md  pipx-release.md  usage.md
scripts/: dev.ps1  setup-codexdeck-pipx.sh  smoke.ps1  test.ps1
src/codexdeck/: __init__.py  __main__.py  app.py  cli.py  core.py  runner.py  ui.py  version.py
src/codexdeck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_cockpit_loop.py  test_config_errors.py  test_imports.py  test_module_entrypoint.py
tests/smoke/: test_stub.py
tests/stubs/: codex_stub.py
tests/unit/: test_command.py  test_config.py  test_entrypoint.py  test_logs.py  test_parser.py  test_path_hygiene.py  test_runner.py  test_state.py  test_ui.py  test_versioning.py
