[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "codexdeck"
dynamic = ["version"]
description = "Terminal cockpit for one Codex process and an AI_TODO.md plan"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MLyte" }]
dependencies = []

[project.scripts]
codexdeck = "codexdeck:main"

[tool.setuptools]
py-modules = [
  "codexdeck",
  "codexdeck_core",
  "codexdeck_runner",
  "codexdeck_ui",
  "codexdeck_version",
]
script-files = ["agent-cockpit.py"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest-tmp"
